--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
-<!DOCTYPE html> 
-<html lang="es"> 
-<head> 
-     <meta charset="UTF-8"> 
-     <title>Mi primera web</title> 
-</head> 
-<body> 
-     <h1>¡Hola mundo! 🌍</h1> 
-     <p>Esta es mi primera página creada con GitHub Pages.</p> 
-</body> 
-</html> 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>El Sabor de Argel - Restaurante Argelino</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <!-- Navegación -->
+  <nav>
+    <div class="nav-inner">
+      <a class="brand" href="index.html">🕌 El Sabor de Argel</a>
+      <div class="links">
+        <a href="index.html">Inicio</a>
+        <a href="menu.html">Menú</a>
+        <a href="contacto.html">Contacto</a>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Hero -->
+  <header class="hero">
+    <div>
+      <h1>Bienvenido a El Sabor de Argel</h1>
+      <p>Descubre la auténtica cocina argelina: aromas del desierto, especias del Mediterráneo y tradición familiar en cada plato.</p>
+      <a href="menu.html" class="btn">Ver el menú</a>
+    </div>
+    <img src="img/couscous.jpg" alt="Plato típico argelino" class="hero-img">
+  </header>
+
+  <!-- Contenido principal -->
+  <main>
+    <section class="panel">
+      <h2>Nuestra historia</h2>
+      <p>Inspirado en los sabores del norte de África, <strong>El Sabor de Argel</strong> nace para compartir la cultura gastronómica de Argelia. Desde el cuscús familiar hasta el té con menta tradicional, cada plato celebra una herencia milenaria.</p>
+    </section>
+
+    <section class="panel">
+      <h2>Video del restaurante</h2>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/lk09zZ_3U_
