--- a/productos.html
+++ b/productos.html
@@ -27,7 +27,7 @@
 
     <section class="menu-grid">
       <div class="menu-item">
-        <img src="couscous.jpg" alt="Cuscús real">
+        <img src="cuscus_real.jpg" alt="Cuscús real">
         <h3>Cuscús Real</h3>
         <p>El plato más famoso de Argelia, preparado con cordero, verduras y sémola fina.</p>
       </div>
@@ -56,3 +56,4 @@
 
 </body>
 </html>
+
